fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-146-56be99e864.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function BorderRadius() {
  return <Box bg="#D9D9D9" borderRadius="20px" />
}"
