fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-147-bb7df0f2f1.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function BorderRadius() {
  return <Box bg="#D9D9D9" borderRadius="20px 30px 50px 40px" />
}"
