fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-148-62e9137131.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function BorderRadius() {
  return <Box bg="#D9D9D9" borderRadius="200px 30px" />
}"
