fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-149-2491f4c5a5.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Gradient() {
  return (
    <Flex
      bg="#FFF"
      overflow="hidden"
      pb="22px"
      pl="57px"
      pr="118px"
      pt="51px"
    >
      <Box bg="linear-gradient(-180deg, #8ADAFF 0%, #C6C9CE 100%)" borderRadius="1000px" boxSize="150px" overflow="hidden" />
    </Flex>
  )
}"
