fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-151-7993d252dc.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Gradient() {
  return (
    <Flex
      bg="#FFF"
      overflow="hidden"
      pb="34px"
      pl="102px"
      pr="110px"
      pt="70px"
    >
      <Box bg="radial-gradient(50% 50% at 50% 50%, #8ADAFF 0%, #DDEAFF 100%)" borderRadius="1000px" boxSize="150px" overflow="hidden" />
    </Flex>
  )
}"
