fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-153-fb5205fc52.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Gradient() {
  return (
    <Flex
      bg="#FFF"
      overflow="hidden"
      pb="38px"
      pl="71px"
      pr="69px"
      pt="37px"
    >
      <Box bg="conic-gradient(from 180deg at 50% 50%, #8ADAFF 0%, #DDEAFF 100%)" borderRadius="1000px" boxSize="150px" overflow="hidden" />
    </Flex>
  )
}"
