fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-156-bec8be9b99.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Text() {
  return (
    <Text
      color="#FFF"
      fontFamily="Inter"
      fontSize="12px"
      fontWeight="400"
      letterSpacing="0em"
      lineHeight="normal"
    >
      Hello World
    </Text>
  )
}"
