fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-157-4cb71f2863.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Text() {
  return (
    <Text
      color="#FFF"
      fontFamily="Inter"
      fontSize="12px"
      fontWeight="400"
      letterSpacing="0em"
      lineHeight="normal"
      w="100px"
    >
      Hello World
    </Text>
  )
}"
